--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="30dp"
     android:paddingRight="30dp"
     android:paddingTop="80dp"
+    android:background="@color/colorPrimary2"
     tools:context=".RegisterActivity">
 
    <android.support.design.widget.TextInputLayout
@@ -73,7 +74,7 @@
 
     <Button
         android:id="@+id/btn_regist"
-        android:backgroundTint="@color/colorPrimary2"
+        android:backgroundTint="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:text="Register"
         android:layout_marginTop="30dp"
